-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.9.6, 5.12.0 Beta 1, 5.12.0
-
Component/s: GUI: Window management
-
Labels:None
-
Environment:MacOS 10.13
-
Platform/s:
-
Commits:b11c5a6e5492ce25b8844550ff1a0dc233b61721
When unhiding an application featuring top-level Qt::Tool windows which were previously shown, the windows are no longer visible.
Steps to reproduce
- Build and run the attached example - notice there is a regular window and a tool window
- Press Command+H to hide the application
- Click the application on the dock to unhide it - the tool window is gone.