src/plugins/platforms/cocoa/qcocoaapplicationdelegate.mm
@@ -341,10 +341,26 @@ QT_END_NAMESPACE
     // fact that the application itself is hidden, which will cause a problem when
     // the application is made visible again.
     const QWindowList topLevelWindows = QGuiApplication::topLevelWindows();
-    for (QWindow *topLevelWindow : qAsConst(topLevelWindows)) {
-        if ((topLevelWindow->type() & Qt::Popup) == Qt::Popup && topLevelWindow->isVisible())
+    for (QWindow *topLevelWindow : topLevelWindows) {
+        if ((topLevelWindow->type() & Qt::Popup) == Qt::Popup && topLevelWindow->isVisible()) {
             topLevelWindow->hide();
+
+            if ((topLevelWindow->type() & Qt::Tool) == Qt::Tool)
+                hiddenWindows << topLevelWindow;
+        }
     }
+}
+
+- (void)applicationDidUnhide:(NSNotification *)notification
+{
+    if (reflectionDelegate
+        && [reflectionDelegate respondsToSelector:@selector(applicationDidUnhide:)])
+        [reflectionDelegate applicationDidUnhide:notification];
+
+    for (QWindow *window : qAsConst(hiddenWindows))
+        window->show();
+
+    hiddenWindows.clear();
 }
 
 - (void)applicationDidBecomeActive:(NSNotification *)notification
